@@ -4,8 +4,8 @@
     <panel colspan="2" height="100" scrollable="true" weightx="1" width="10" top="5" bottom="5" left="5" right="5">
         <panel weighty="1" name="myCardsPanel"/>
     </panel>
-    <panel columns="2" gap="5" bottom="5" top="5" left="5" right="5">
-        <textarea editable="false" i18n="true" text="cards.note" wrap="true" weightx="3"/>
+    <panel columns="2" gap="10" bottom="5" top="5" left="5" right="5">
+        <textarea editable="false" i18n="true" text="cards.hint" wrap="true" weightx="3"/>
         <panel columns="1" weightx="1">
             <textarea name="NumArmies" editable="false" wrap="true" weightx="1"/>
             <button action="trade" i18n="true" name="tradeButton" text="cards.trade"/>
